{THEME} Update Theme New Base - Supression dans le forum_top du style "background:none" dans le module_position - Taille du Header r?duite ? 170px - Modificaiton du module_position du forum - Changement de couleur pour les fieldsets du panel d'admin - Correction du bug dans le BBcode (ajout vertical-align:middle) pour le forum

--- a/templates/newbase/theme/bbcode.css
+++ b/templates/newbase/theme/bbcode.css
@@ -7,10 +7,15 @@
 	border:1px solid #BEBEBE;
 	border-collapse:collapse;
 	border-spacing:0px;
-	
+	height:32px;
 }
+
 .bbcode td, .bbcode2 td{
-	padding-top:5px; 
+	 
+}
+
+.bbcode img, .bbcode2 img{
+	vertical-align:middle; 
 }
 
 .bbcode2{
